# multimodal-survival-analysis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yaml
cli/: run_embeddings.sh
scripts/: bag-of-patches.py  compute_metrics.py  feature_importance.py  generate_dataset.py  gsea_analysis.py  train_embeddings.py  train_survival_analysis.py  validation_proxy.py
scripts/parameters/: embeddings_params.json  latent.yaml  params_maui.json  survival_params.json
src/multimodal_survival/: __init__.py  autoencoder.py  clustering.py  clustering_analysis.py  decoder.py  encoder.py
src/multimodal_survival/utilities/: __init__.py  dataset.py  layers.py  preprocess_data.py  registries.py  utils.py
